--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-	
+		<h1> <img src="images/blackgoose.png"> Black Goose Bistro</h1>
+	<hr>
 	
 	<h2>The Restuarant</h2>
 	<p>The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.</p>
