--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 		<li>Closed Sunday</li>
 	</ul>
 	
+	<!-- Links -->
+	<p><a href="http://www.grc.calpoly.edu/" target="_blank">Jen's Kitchen</a></p>
 	
+	<p><a href="#top">Go to top of the Page</a></p>
+	<!-- End Links -->
 	
 </body>
 </html>
