--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 		<h1> <img src="images/blackgoose.png"> Black Goose Bistro</h1>
 	<hr>
 	
-	<h2>The Restuarant</h2>
-	<p>The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.</p>
-	<h2>Catering</h2>
-	<p>You have fun...<em>we'll handle the cooking</em>. Black Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.</p>
-	<h2>Location and Hours</h2>
-	<p>Seekonk, Massachusetts;</p>
 	<!--changed all headings to h2 to keep same size -->
 	
+	<!--Info about restuarant -->
+	<h2>The Restuarant</h2>
+	<p>The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.</p>
+	
+	<h2>Catering</h2>
+	<p>You have fun...<em>we'll handle the cooking</em>. Black Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.</p>
+	
+	
+	<h2>Location and Hours</h2>
+	<p>Seekonk, Massachusetts;</p>
+	<!-- Hours List -->
 	<ul>
 		<li>Monday through Thursday 11am – 9pm</li>
 		<li>Friday and Saturday, 11am – midnight</li>
